Closed
Bug 382490
Opened 18 years ago
Closed 18 years ago
BreakAndMeasureText trimming sometimes trims more characters than it should
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
People
(Reporter: roc, Assigned: roc)
References
Details
Attachments
(1 file)
|
3.70 KB,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
The trimming code I added to BreakAndMeasureText has a bug. When BreakAndMeasureText runs out of space and backs up to the last break opportunity, we need to restore the trimming state (number of trimmable characters at the end of the string, and the width of those characters) to the values it had at the last break opportunity. Otherwise bad things happen; for example we can return a number of trimmable characters that's greater than the value we return for the number of characters that fit. Hilarity ensues. (I think this may fix the Washington Post crashes.)
Attachment #266651 -
Flags: review?(pavlov)
Updated•18 years ago
|
Attachment #266651 -
Attachment is patch: true
Attachment #266651 -
Attachment mime type: application/text → text/plain
Comment 1•18 years ago
|
||
I've spent over 30 minutes browsing washingtonpost.com, dailylocal.com, 6abc.com, and some other sites that caused crashing for me and they're all behaving very nicely now with this patch applied.
Updated•18 years ago
|
Attachment #266651 -
Flags: review?(pavlov) → review+
| Assignee | ||
Comment 2•18 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•