Bug 382490. Fix trimming in BreakAndMeasureText so when we back up to a break opportunity, we back up the trimming state too. r=pavlov